--- a/src/app/abouttsa/abouttsa.component.css
+++ b/src/app/abouttsa/abouttsa.component.css
@@ -70,7 +70,7 @@
 
 .zach-img {
 
-    background-image: url("../../assets/zach-img.png");
+    background-image: url("../../assets/zachimg.png");
     background-size: 100%;
     background-repeat: no-repeat;
     height: 200px;
@@ -78,7 +78,7 @@
 }
 
 .hayden-img {
-    background-image: url("../../assets/hayden-img.jpg");
+    background-image: url("../../assets/haydenimg.jpg");
     background-size: 100%;
     background-repeat: no-repeat;
     height: 200px;
@@ -86,7 +86,7 @@
 }
 
 .pyae-img {
-    background-image: url("../../assets/pyae-img.png");
+    background-image: url("../../assets/pyaeimg.png");
     background-size: 100%;
     background-repeat: no-repeat;
     height: 200px;
@@ -94,7 +94,7 @@
 }
 
 .raheem-img {
-    background-image: url("../../assets/raheem-img.jpg");
+    background-image: url("../../assets/raheemimg.jpg");
     background-size: 100%;
     background-repeat: no-repeat;
     height: 200px;
