--- a/src/app/car1/car1.component.css
+++ b/src/app/car1/car1.component.css
@@ -25,7 +25,7 @@
     width: 100%;
     height: 700px;
     background-color: white;
-    background-image: url("../../assets/Car1-1.jpg");
+    background-image: url("../../assets/Car11.jpg");
     background-size: 100%; 
     background-attachment: fixed;
     background-position: center;
@@ -38,7 +38,7 @@
     width: 100%;
     height: 700px;
     background-color: white;
-    background-image: url("../../assets/Car1-2.jpg");
+    background-image: url("../../assets/Car12.jpg");
     background-size: 100%; 
     background-attachment: fixed;
     background-position: center;
