--- a/src/app/car3/car3.component.css
+++ b/src/app/car3/car3.component.css
@@ -25,7 +25,7 @@
     width: 100%;
     height: 700px;
     background-color: white;
-    background-image: url("../../assets/Car3-1.jpg");
+    background-image: url("../../assets/Car31.jpg");
     background-size: 100%; 
     background-attachment: fixed;
     background-position: center;
@@ -38,7 +38,7 @@
     width: 100%;
     height: 700px;
     background-color: white;
-    background-image: url("../../assets/Car3-2.jpg");
+    background-image: url("../../assets/Car32.jpg");
     background-size: 100%; 
     background-attachment: fixed;
     background-position: center;
