--- a/src/app/abouttsa/abouttsa.component.css
+++ b/src/app/abouttsa/abouttsa.component.css
@@ -70,7 +70,7 @@
 
 .zach-img {
 
-    background-image: url("../../assets/zachimg.png");
+    background-image: url("../../assets/zachimg.PNG");
     background-size: 100%;
     background-repeat: no-repeat;
     height: 200px;
@@ -86,7 +86,7 @@
 }
 
 .pyae-img {
-    background-image: url("../../assets/pyaeimg.png");
+    background-image: url("../../assets/pyaeimg.PNG");
     background-size: 100%;
     background-repeat: no-repeat;
     height: 200px;
