--- a/src/app/car2/car2.component.css
+++ b/src/app/car2/car2.component.css
@@ -25,7 +25,7 @@
     width: 100%;
     height: 700px;
     background-color: white;
-    background-image: url("../../assets/Car21.png");
+    background-image: url("../../assets/car21.png");
     background-size: 100%; 
     background-attachment: fixed;
     background-position: center;
@@ -38,7 +38,7 @@
     width: 100%;
     height: 700px;
     background-color: white;
-    background-image: url("../../assets/Car22.png");
+    background-image: url("../../assets/car22.png");
     background-size: 100%; 
     background-attachment: fixed;
     background-position: center;
