--- a/src/app/index/index.component.css
+++ b/src/app/index/index.component.css
@@ -27,7 +27,7 @@
     width: 100%;
     height: 700px;
     background-color: white;
-    background-image: url("../../assets/Car1.jpg");
+    background-image: url("../../assets/car1.jpg");
     background-size: 100%; 
     background-attachment: fixed;
     background-position: center;
@@ -40,7 +40,7 @@
     width: 100%;
     height: 700px;
     background-color: white;
-    background-image: url("../../assets/Car2.jpg");
+    background-image: url("../../assets/car2.jpg");
     background-size: 100%; 
     background-attachment: fixed;
     background-position: center;
@@ -53,7 +53,7 @@
     width: 100%;
     height: 700px;
     background-color: white;
-    background-image: url("../../assets/Car3.jpg");
+    background-image: url("../../assets/car3.jpg");
     background-size: 100%; 
     background-attachment: fixed;
     background-position: center;
